 - fitter.fit_model now warns you if you are not constraining the result and returns null errors rather than crash or produce garbage
 - added some checks for data and hessian quality in error handling for fitter.fit_model
 - default sun position changed to left-handed coordinate system for consistency
 - added sampler.perturb_value() for noise generation in quantity arrays

v1.2.1
 - added density function to NFW model
 - fixed vertical acceleration of exponential disk
 - bug fix in models.atan() and models.a_gal_sph()

v1.2.0
 - model params set to None are now correctly disabled on init
 - fixed bug in distance calculation for convenience.pdot_shk()
 - model keyword args can now be passed into, for example, galpy potentials through model.alos([...], phi=my_phi) etc.
 - icrs to gal, cart conversion using frame kwarg now works correctly
 - added support for galpy potentials that cannot take arrays as inputs
 - added RadialDensityOscillation model
 - added noise models to the optimizer

v1.1.0
 - edited README.md
 - made changes to docstrings to improve readthedocs
 - added model.atan() and model.a_gal_sph() functions to calculate proper accelerations
 - added convenience.dot and convenience.mags helper functions
 - added CoxGomezSpiralArm potential to Models
 - changed UniformAccel Model to UniformAlos
 - added Uniform3DAccel Model
 - fixed bug in models.a_gal_sph() by changing np.put -> np.place, which can take conditions instead of indices
 - fixed bug in fit chi^2 statistic calculation, is now correct
 - fixed bug in fix_arrays() wrapper that caused things to break when not running the docs generator

v1.0.0
 - put out public repo release on Pypi
 - changed a bunch of readthedocs and documentation stuff
 - changed the way that default/disabled parameters work to fix fitter.fit_model()
 - added model.get_param_default() method for some 
 - fitter catches singular matrices in the hessian so you can debug
 - added UniformAccel model

v0.0.9